test/interaction/Issue2447.agda
import Issue2447.M

Rejected : Set
Rejected = Set
